[package]
name = "modelfarm-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
reverse-proxy-service = { version = "0.2.1", features = ["axum", "https"] }
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"
tracing = "0.1.40"
tower-http = { version = "0.4.4", features = ["cors"] }
tracing-subscriber = "0.3.18"
reqwest = { version = "0.11.22", features = ["json"] }
serde_json = "1.0.108"

[profile]

[profile.ci]
inherits = "dev"
incremental = false
debug = "line-tables-only"
lto = "off"
